icons and titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Graffic</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_home">Custom</string>
-    <string name="title_dashboard">History</string>
-    <string name="title_notifications">Answer Mode</string>
+    <string name="title_custom">Custom</string>
+    <string name="title_history">History</string>
+    <string name="title_answer_mode">Answer Mode</string>
 </resources>
