--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_custom">Custom</string>
     <string name="title_history">History</string>
     <string name="title_answer_mode">Answer Mode</string>
+    <string name="button_enable">Enable</string>
+    <string name="button_disable">Disable</string>
+    <string name="text_view_enabled">Enabled</string>
+    <string name="text_view_disabled">Disabled</string>
 </resources>
